[project]
name = "ngrok-ssh-telegram-bot"
version = "0.1.0"
description = "A Python tool that automatically launches ngrok tunnels and notifies authorized users via Telegram bot with connection details for secure remote SSH access."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx2==2.5.0",
    "python-telegram-bot==22.8",
    "trio==0.33.0",
    "typer==0.26.8",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
